Completed AngularDart Material Design tutorial.

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body>
+    <h1>Name your next startup</h1>
     <my-app>Loading...</my-app>
   </body>
 </html>
